# golem-llm

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml
.zed/: settings.json
exec/: Makefile.toml
exec/exec/: Cargo.toml
exec/exec/src/: bindings.rs  component.rs  durability.rs  lib.rs
exec/exec/src/javascript/: mod.rs
exec/exec/src/javascript/builtin/: buffer.js  console.rs  eventemitter.js  fs.rs  ieee754.js  mod.rs  process.js  process.rs  readline.js  timeout.js  timeout.rs
exec/exec/src/python/: mod.rs
exec/exec/wit/: exec.wit
exec/javascript/: Cargo.toml
exec/javascript/src/: bindings.rs  lib.rs
exec/javascript/src/builtin/: base64_js.rs  buffer.rs  console.js  console.rs  eventemitter.rs  fs.js  fs.rs  ieee754.rs  mod.rs  process.rs  readline.rs
exec/javascript/wit/: javascript.wit
exec/python/: Cargo.toml
exec/python/src/: bindings.rs  lib.rs
exec/python/wit/: python.wit
graph/: Cargo.toml  Makefile.toml
graph-arangodb/: Cargo.toml
graph-arangodb/src/: bindings.rs  client.rs  connection.rs  conversions.rs  helpers.rs  lib.rs  query.rs  schema.rs  transaction.rs  traversal.rs
graph-arangodb/wit/: arangodb.wit
graph-janusgraph/: Cargo.toml
graph-janusgraph/src/: bindings.rs  client.rs  connection.rs  conversions.rs  helpers.rs  lib.rs  query.rs  schema.rs  transaction.rs  traversal.rs
graph-janusgraph/wit/: janusgraph.wit
graph-neo4j/: Cargo.toml
graph-neo4j/src/: bindings.rs  client.rs  connection.rs  conversions.rs  helpers.rs  lib.rs  query.rs  schema.rs  transaction.rs  traversal.rs
graph-neo4j/wit/: neo4j.wit
graph/arangodb/: Cargo.toml
graph/arangodb/src/: bindings.rs  client.rs  connection.rs  conversions.rs  helpers.rs  lib.rs  query.rs  schema.rs  transaction.rs  traversal.rs
graph/graph/: Cargo.toml
graph/graph/src/: config.rs  durability.rs  error.rs  lib.rs  query_utils.rs
graph/janusgraph/: Cargo.toml
graph/janusgraph/src/: bindings.rs  client.rs  connection.rs  conversions.rs  helpers.rs  lib.rs  query.rs  query_utils.rs  schema.rs  transaction.rs  traversal.rs
graph/neo4j/: Cargo.toml
graph/src/: durability.rs  error.rs  lib.rs
llm/: Makefile.toml  README.md
llm/bedrock/: Cargo.toml
llm/ollama/: Cargo.toml
search/: Makefile.toml  README.md
search/algolia/: Cargo.toml
search/elasticsearch/: Cargo.toml
search/meilisearch/: Cargo.toml
search/opensearch/: Cargo.toml
search/typesense/: Cargo.toml
stt/: Makefile.toml  README.md
stt/aws/: Cargo.toml
stt/aws/src/: aws.rs  aws_client.rs  bindings.rs  client.rs  conversions.rs  error.rs  lib.rs
stt/aws/src/transcription/: api.rs  aws_s3.rs  aws_signer.rs  aws_transcribe.rs  mod.rs  request.rs  wasi.rs
stt/aws/wit/: aws.wit
stt/azure/: Cargo.toml
stt/azure/src/: bindings.rs  lib.rs  transcription.rs
stt/azure/wit/: azure.wit
stt/deepgram/: Cargo.toml
stt/deepgram/src/: bindings.rs  client.rs  conversions.rs  lib.rs  transcription.rs
stt/deepgram/wit/: deepgram.wit
stt/google/: Cargo.toml
stt/google/src/: bindings.rs  lib.rs
stt/google/src/transcription/: api.rs  gcp_auth.rs  gcp_cloud_storage.rs  gcp_speech_to_text.rs  mod.rs  request.rs  wasi.rs
stt/google/wit/: google.wit
stt/stt/: Cargo.toml
stt/stt/src/: client.rs  client2.rs  durability.rs  error.rs  guest.rs  http.rs  http_client.rs  lib.rs  retry.rs  runtime.rs  transcription.rs  transcription_queue.rs
stt/whisper/: Cargo.toml
stt/whisper/src/: bindings.rs  client.rs  conversions.rs  languages.rs  lib.rs  transcription.rs
stt/whisper/wit/: whisper.wit
test graph/: Cargo.toml
test-exec/components-rust/test-exec-js/: Cargo.toml  golem.yaml
test-exec/components-rust/test-exec-js/wit/: test-exec-js.wit
test-stt/: Cargo.toml
test-stt/components-rust/test-stt/: Cargo.toml  golem.yaml
test-stt/components-rust/test-stt/src/: lib.rs
test-stt/components-rust/test-stt/wit/: test-stt.wit
test/components-rust/test-websearch/: Cargo.toml  golem.yaml
test/components-rust/test-websearch/src/: lib.rs
test/components-rust/test-websearch/wit/: test-websearch.wit
test/exec/components-rust/test-exec-js/: Cargo.toml  golem.yaml
test/exec/components-rust/test-exec-js/src/: lib.rs
test/exec/components-rust/test-exec-js/wit/: test-exec-js.wit
test/exec/components-rust/test-exec-py/: Cargo.toml  golem.yaml
test/exec/components-rust/test-exec-py/src/: lib.rs
test/exec/components-rust/test-exec-py/wit/: test-exec-py.wit
test/video/: golem.yaml
test/video-advanced/components-rust/test-video-advanced/: Cargo.toml  golem.yaml
test/video-advanced/components-rust/test-video-advanced/src/: lib.rs
test/video-advanced/components-rust/test-video-advanced/wit/: test-video-advanced.wit
test/video/components-rust/test-video/: Cargo.toml  golem.yaml
test/video/components-rust/test-video/src/: lib.rs
test/video/components-rust/test-video/wit/: test-video.wit
test/websearch/: .gitignore
test/websearch/components-rust/test-websearch/: Cargo.toml  golem.yaml
test/websearch/components-rust/test-websearch/wit/: test-websearch.wit
video/: Makefile.toml  README.md
video/kling/: Cargo.toml
video/runway/: Cargo.toml
video/runway/src/: bindings.rs  client.rs  conversion.rs  lib.rs
video/runway/wit/: runway.wit
video/stability/: Cargo.toml
video/veo/: Cargo.toml
video/veo/src/: authentication.rs  bindings.rs  client.rs  conversion.rs  lib.rs
video/veo/wit/: veo.wit
video/video/: Cargo.toml
websearch/: Makefile.toml  README.md
websearch/brave/: Cargo.toml
websearch/google/: Cargo.toml
websearch/google/src/: bindings.rs  client.rs  conversions.rs  lib.rs
websearch/google/wit/: google.wit
websearch/serper/: Cargo.toml
websearch/tavily/: Cargo.toml
websearch/websearch/: Cargo.toml
websearch/websearch/src/: config.rs  durability.rs  error.rs  lib.rs  session_stream.rs  types.rs
websearch/websearch/src/event_source/: error.rs  event_stream.rs  mod.rs  ndjson_stream.rs  parser.rs  stream.rs  types.rs  utf8_stream.rs
websearch/websearch/wit/: websearch.wit
wit-graph/: golem-graph.wit
(+89 files in other folders)
