[workspace]
resolver = "2"

members = [
    "llm/llm",
    "llm/anthropic",
    "llm/grok",
    "llm/ollama",
    "llm/openai",
    "llm/openrouter",
    "stt/stt",
    "stt/whisper",
    "stt/deepgram",
    "stt/aws",
    "stt/azure",
    "stt/google",

]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.6.0"
log = "0.4.27"
golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
golem-stt = { path = "stt/stt", version = "0.0.0" }
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
    "json",
    "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
base64 = { version = "0.22.1" }
