[workspace]
resolver = "2"
members = ["components-rust/*"]

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]
golem-rust = { version = "1.6.0", features = [
    "export_load_snapshot",
    "export_save_snapshot",
    "export_oplog_processor",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
