[package]
name = "golem-exec"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-ai"
description = "WebAssembly components for executing dynamic code snippets, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
golem-rust = { workspace = true }

base64 = "0.22.1"
hex = "0.4.3"
log = { workspace = true }
reqwest = { workspace = true }
thiserror = "2.0.12"
wasi-logger = "0.1.2"
wit-bindgen = { version = "0.40.0" }

[features]
default = ["durability"]
durability = ["golem-rust/durability"]
nopoll = []
