[package]
name = "golem-graph-arangodb"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with ArangoDB APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-graph/durability"]

[dependencies]
golem-graph = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.component]
package = "golem:graph-arangodb"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:graph/errors@1.0.0" = "golem_graph::golem::graph::errors"
"golem:graph/types@1.0.0" = "golem_graph::golem::graph::types"
"golem:graph/connection@1.0.0" = "golem_graph::golem::graph::connection"
"golem:graph/transactions@1.0.0" = "golem_graph::golem::graph::transactions"
"golem:graph/traversal@1.0.0" = "golem_graph::golem::graph::traversal"
"golem:graph/schema@1.0.0" = "golem_graph::golem::graph::schema"
"golem:graph/query@1.0.0" = "golem_graph::golem::graph::query"


[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:graph" = { path = "wit/deps/golem-graph" }
"wasi:io" = { path = "wit/deps/wasi:io"} 