[package]
name = "golem-stt-aws"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with AWS Transcribe Speech to Text API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
bytes = "1.2"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
http = "=1.3.1"
url = "2.5.4"
percent-encoding = "=2.3.1"
chrono = "0.4.41"
wasi = "0.12.1+wasi-0.2.0"
wasi-async-runtime = "0.1.2"
futures = { version = "0.3.31", features = [] }
futures-concurrency = "7.6.3"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = [
    "json",
    "multipart",
    "async",
] }

[dev-dependencies]
aws-sigv4 = "1.2.6"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"

[package.metadata.component]
package = "golem:stt-aws"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }
