[package]
name = "golem-stt-azure"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Azure Speech to Text API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
wstd = { workspace = true }
futures-concurrency = "7.6.3"
derive_more = { version = "2.0.1", features = ["from"] }
http = "=1.3.1"
url = "2.5.4"
itertools = "0.14.0"
once_cell = "1.21.3"

[dev-dependencies]
multipart-2021 = "0.19.0"

[package.metadata.component]
package = "golem:stt-azure"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }
"wasi:io" = { path = "wit/deps/wasi:io" }
