[package]
name = "golem-stt-deepgram"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Deepgram Speech to Text API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
bytes = "1.2"
http = "=1.3.1"
url = "2.5.4"
wasi-async-runtime = "0.1.2"
futures = { version = "0.3.31", features = [] }
futures-concurrency = "7.6.3"
itertools = "0.14.0"

[dev-dependencies]


[package.metadata.component]
package = "golem:stt-deepgram"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }
