[package]
name = "golem-stt-google"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Google Speech to Text API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }
wstd = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
http = "=1.3.1"
url = "2.5.4"
futures-concurrency = "7.6.3"
async-lock = "3.4.0"
itertools = "0.14.0"
chrono = "0.4.41"
urlencoding = "2.1.3"
once_cell = "1.21.3"
# Cryptographic dependencies for proper JWT signing
rsa = "0.9.8"
sha2 = { version = "0.10.9", features = ["oid"] }
rand = "0.8"

[dev-dependencies]
multipart-2021 = "0.19.0"

[package.metadata.component]
package = "golem:stt-google"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }
"wasi:io" = { path = "wit/deps/wasi:io" }
