[package]
name = "golem-stt"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly components for working with STT APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
golem-rust = { workspace = true }
wit-bindgen = { version = "0.40.0" }
bytes = "1.2"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = [
    "json",
    "multipart",
    "async",
] }
serde = { workspace = true }
serde_json = { workspace = true }
http = "=1.3.1"
url = "2.5.4"
wasi-async-runtime = "0.1.2"
futures = { version = "0.3.31", features = [] }
futures-concurrency = "7.6.3"

derive_more = { version = "2.0.1", features = ["from"] }
