[package]
name = "golem-stt-whisper"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with OpenAI Whisper transciption API, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-stt = { workspace = true }

golem-rust = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
bytes = "1.2"

[dev-dependencies]
multipart = "=0.18.0"

[package.metadata.component]
package = "golem:stt-whisper"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:stt/types@1.0.0" = "golem_stt::golem::stt::types"
"golem:stt/languages@1.0.0" = "golem_stt::golem::stt::languages"
"golem:stt/transcription@1.0.0" = "golem_stt::golem::stt::transcription"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:stt" = { path = "wit/deps/golem-stt" }
