[package]
name = "golem-video-runway"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Runway video APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-video/durability"]

[dependencies]
golem-video = { path = "../video", version = "0.0.0", default-features = false }

golem-rust = { workspace = true }
log = { workspace = true }
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "golem:video-runway"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:video-generation/types@1.0.0" = "golem_video::golem::video_generation::types"
"golem:video-generation/video-generation@1.0.0" = "golem_video::golem::video_generation::video_generation"
"golem:video-generation/lip-sync@1.0.0" = "golem_video::golem::video_generation::lip_sync"
"golem:video-generation/advanced@1.0.0" = "golem_video::golem::video_generation::advanced"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:video" = { path = "wit/deps/golem-video" } 