[package]
name = "test_exec_js"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
# To use common shared libs, use the following:
# common-lib = { path = "../../common-rust/common-lib" }

indoc = "2.0.6"
golem-rust = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.bindings.with]

[package.metadata.component.target.dependencies]
"golem:exec" = { path = "wit-generated/deps/golem-exec" }
"wasi:io" = { path = "wit-generated/deps/wasi_io" }
"wasi:cli" = { path = "wit-generated/deps/wasi_cli" }
"wasi:clocks" = { path = "wit-generated/deps/wasi_clocks" }
"wasi:filesystem" = { path = "wit-generated/deps/wasi_filesystem" }
"wasi:random" = { path = "wit-generated/deps/wasi_random" }
"root:component" = { path = "wit-generated/deps/root_component" }
"test:exec-js-exports" = { path = "wit-generated/deps/test_exec-js-exports" }

[package.metadata.component.bindings]
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62

# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true