[package]
name = "test_websearch"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[features]
default = ["google"]
brave = []
tavily = []
google = []
serper = []

[dependencies]
golem-rust = { workspace = true }
log = { version = "0.4.27" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.target]
path = "wit-generated"


[package.metadata.component.target.dependencies]
"golem:web-search" = { path = "wit-generated/deps/golem-websearch" }
"test:websearch-exports" = { path = "wit-generated/deps/test_websearch-exports" }
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }

[package.metadata.component.bindings]
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62
# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true
