[package]
name = "test_video_advanced"
version = "0.0.1"
edition = "2021"

[features]
default = ["kling"]
kling = []

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
"golem:video-generation" = { path = "wit-generated/deps/golem-video" }
"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
"test:video-advanced-exports" = { path = "wit-generated/deps/test_video-advanced-exports" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
golem-rust = { workspace = true }
wit-bindgen-rt = { workspace = true }
