[package]
name = "test_video_advanced"
version = "0.0.1"
edition = "2021"

[features]
default = ["kling"]
kling = []

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
"golem:video-generation" = { path = "wit-generated/deps/golem-video" }
"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
"test:video-advanced-exports" = { path = "wit-generated/deps/test_video-advanced-exports" }

[package.metadata.component.bindings]

[package.metadata.component.bindings.with]
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"
"wasi:clocks/wall-clock@0.2.0" = "golem_rust::wasm_rpc::wasi::clocks::wall_clock"
"golem:rpc/types@0.2.0" = "golem_rust::wasm_rpc::golem_rpc_0_2_x::types"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
golem-rust = { workspace = true }
wit-bindgen-rt = { workspace = true }
